// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders close correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={false}
      >
        <BlurView
          blurAmount={10}
          blurType="light"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        />
        <View
          accessible={true}
          focusable={true}
        >
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`renders open correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={true}
      >
        <BlurView
          blurAmount={10}
          blurType="light"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        />
        <View
          accessible={true}
          focusable={true}
        >
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`renders with incorrect initial value correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Modal
        animated={true}
        hardwareAccelerated={false}
        supportedOrientations={
          Array [
            "portrait",
            "portrait-upside-down",
            "landscape",
            "landscape-left",
            "landscape-right",
          ]
        }
        transparent={true}
        visible={true}
      >
        <BlurView
          blurAmount={10}
          blurType="light"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        />
        <View
          accessible={true}
          focusable={true}
        >
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          />
        </View>
      </Modal>
    </View>
  </View>
</View>
`;
